# traversability

./: .bazelrc  .dockerignore  .gitignore  BUILD.bazel  CMakeLists.txt  Dockerfile  WORKSPACE.bazel  docker-compose.yml  package.xml
.claude/: settings.local.json
config/: cyclonedds.xml  dataflow.yaml
config/params/: bev_fusion.yaml  bev_projection.yaml  camera_preprocess.yaml  costmap_fusion.yaml  depth_generation.yaml  elevation_mapping.yaml  lidar_aggregator.yaml  lidar_ground_filter.yaml  lidar_preprocess.yaml  lidar_projection.yaml  segmentation.yaml  semantic_lifting.yaml  sensor_sync.yaml  temporal_grid.yaml  terrain_model.yaml  traversability_costmap.yaml
docker/: entrypoint.sh
launch/: perception.launch.py
scripts/: generate_launch.py  render_dataflow.py  visualize_dataflow.py
src/bev_fusion/: BUILD.bazel  CMakeLists.txt  package.xml
src/bev_fusion/include/bev_fusion/: bev_fusion_node.hpp
src/bev_fusion/src/: bev_fusion_node.cpp  main.cpp
src/bev_projection/: BUILD.bazel
src/bev_projection/include/bev_projection/: bev_projection_node.hpp
src/bev_projection/src/: bev_projection_node.cpp  main.cpp
src/camera_preprocess/: BUILD.bazel  CMakeLists.txt  package.xml
src/camera_preprocess/include/camera_preprocess/: camera_preprocess_node.hpp
src/camera_preprocess/src/: camera_preprocess_node.cpp  main.cpp
src/costmap_fusion/: BUILD.bazel
src/costmap_fusion/include/costmap_fusion/: costmap_fusion_node.hpp
src/costmap_fusion/src/: costmap_fusion_node.cpp  main.cpp
src/depth_generation/: BUILD.bazel
src/depth_generation/include/depth_generation/: depth_generation_node.hpp
src/depth_generation/src/: depth_generation_node.cpp  main.cpp
src/elevation_mapping/: BUILD.bazel  CMakeLists.txt  package.xml
src/elevation_mapping/include/elevation_mapping/: elevation_mapping_node.hpp
src/elevation_mapping/src/: elevation_mapping_node.cpp  main.cpp
src/lidar_aggregator/: BUILD.bazel  CMakeLists.txt  package.xml
src/lidar_aggregator/include/lidar_aggregator/: lidar_aggregator_node.hpp
src/lidar_aggregator/src/: lidar_aggregator_node.cpp  main.cpp
src/lidar_ground_filter/: BUILD.bazel  CMakeLists.txt  package.xml
src/lidar_ground_filter/include/lidar_ground_filter/: lidar_ground_filter_node.hpp
src/lidar_ground_filter/src/: lidar_ground_filter_node.cpp  main.cpp
src/lidar_preprocess/: BUILD.bazel  CMakeLists.txt  package.xml
src/lidar_preprocess/include/lidar_preprocess/: lidar_preprocess_node.hpp
src/lidar_preprocess/src/: lidar_preprocess_node.cpp  main.cpp
src/lidar_projection/: BUILD.bazel  CMakeLists.txt  package.xml
src/lidar_projection/include/lidar_projection/: lidar_projection_node.hpp
src/lidar_projection/src/: lidar_projection_node.cpp  main.cpp
src/segmentation/: BUILD.bazel  CMakeLists.txt  package.xml
src/segmentation/include/segmentation/: segmentation_node.hpp
src/segmentation/src/: main.cpp  segmentation_node.cpp
src/semantic_lifting/: BUILD.bazel  CMakeLists.txt  package.xml
src/semantic_lifting/include/semantic_lifting/: semantic_lifting_node.hpp
src/semantic_lifting/src/: main.cpp  semantic_lifting_node.cpp
src/sensor_sync/: BUILD.bazel
src/sensor_sync/include/sensor_sync/: sensor_sync_node.hpp
src/sensor_sync/src/: main.cpp  sensor_sync_node.cpp
src/temporal_grid/: BUILD.bazel  CMakeLists.txt  package.xml
src/temporal_grid/include/temporal_grid/: temporal_grid_node.hpp
src/temporal_grid/src/: main.cpp  temporal_grid_node.cpp
src/terrain_model/: CMakeLists.txt  package.xml
src/terrain_model/include/terrain_model/: terrain_model_node.hpp
src/terrain_model/src/: main.cpp  terrain_model_node.cpp
src/traversability_costmap/: BUILD.bazel  CMakeLists.txt  package.xml
src/traversability_costmap/include/traversability_costmap/: traversability_costmap_node.hpp
src/traversability_costmap/src/: main.cpp  traversability_costmap_node.cpp
tests/: README.md  requirements-dev.txt  test_dataflow_yaml.py
