package(default_visibility = ["//visibility:public"])

# ── All node libraries (composable) ──────────────────────────────────────────
filegroup(
    name = "all_nodes",
    srcs = [
        # sensor_preprocessor process
        "//src/camera_preprocess:camera_preprocess_node",
        "//src/lidar_aggregator:lidar_aggregator_node",
        "//src/lidar_preprocess:lidar_preprocess_node",
        # semantic_generator process
        "//src/lidar_ground_filter:lidar_ground_filter_node",
        "//src/elevation_mapping:elevation_mapping_node",
        "//src/segmentation:segmentation_node",
        "//src/lidar_projection:lidar_projection_node",
        "//src/semantic_lifting:semantic_lifting_node",
        # terrain_modeler process
        "//src/bev_fusion:bev_fusion_node",
        "//src/temporal_grid:temporal_grid_fusion_node",
        "//src/traversability_costmap:traversability_costmap_node",
    ],
)

# ── All standalone executables (one per process) ─────────────────────────────
filegroup(
    name = "all_executables",
    srcs = [
        "//src/camera_preprocess:camera_preprocess_main",
        "//src/lidar_aggregator:lidar_aggregator_main",
        "//src/lidar_preprocess:lidar_preprocess_main",
        "//src/lidar_ground_filter:lidar_ground_filter_main",
        "//src/elevation_mapping:elevation_mapping_main",
        "//src/segmentation:segmentation_main",
        "//src/lidar_projection:lidar_projection_main",
        "//src/semantic_lifting:semantic_lifting_main",
        "//src/bev_fusion:bev_fusion_main",
        "//src/temporal_grid:temporal_grid_fusion_main",
        "//src/traversability_costmap:traversability_costmap_main",
    ],
)
