workspace(name = "traversability_generator")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# ─────────────────────────────────────────────────────────────────────────────
# rules_ros2 — ROS 2 Bazel rules (ApexAI)
# Update sha256 to match the release you pin to.
# Latest releases: https://github.com/ApexAI/rules_ros2/releases
# ─────────────────────────────────────────────────────────────────────────────
http_archive(
    name = "rules_ros2",
    sha256 = "REPLACE_WITH_ACTUAL_SHA256",
    strip_prefix = "rules_ros2-0.6.0",
    urls = ["https://github.com/ApexAI/rules_ros2/archive/refs/tags/v0.6.0.tar.gz"],
)

load("@rules_ros2//:repositories.bzl", "rules_ros2_dependencies")
rules_ros2_dependencies()

load("@rules_ros2//:defs.bzl", "ros2_register_toolchains")
ros2_register_toolchains()

# ─────────────────────────────────────────────────────────────────────────────
# rules_foreign_cc — wraps CMake-based deps (elevation_mapping_cupy, etc.)
# ─────────────────────────────────────────────────────────────────────────────
http_archive(
    name = "rules_foreign_cc",
    sha256 = "REPLACE_WITH_ACTUAL_SHA256",
    strip_prefix = "rules_foreign_cc-0.10.1",
    urls = ["https://github.com/bazelbuild/rules_foreign_cc/archive/refs/tags/0.10.1.tar.gz"],
)

load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")
rules_foreign_cc_dependencies()
