<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>traversability_generator</name>
  <version>0.1.0</version>
  <description>Traversability generator — launch files and config</description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>camera_preprocess</exec_depend>
  <exec_depend>segmentation</exec_depend>
  <exec_depend>lidar_aggregator</exec_depend>
  <exec_depend>lidar_preprocess</exec_depend>
  <exec_depend>terrain_model</exec_depend>
  <exec_depend>lidar_projection</exec_depend>
  <exec_depend>semantic_lifting</exec_depend>
  <exec_depend>bev_fusion</exec_depend>
  <exec_depend>temporal_grid</exec_depend>
  <exec_depend>traversability_costmap</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
