load("@rules_ros2//ros2:cc_defs.bzl", "ros2_cc_binary", "ros2_cc_library")

ros2_cc_library(
    name = "bev_fusion_node",
    srcs = ["src/bev_fusion_node.cpp"],
    hdrs = ["include/bev_fusion/bev_fusion_node.hpp"],
    includes = ["include"],
    deps = [
        "@ros2_rclcpp//:rclcpp",
        "@ros2_rclcpp_components//:rclcpp_components",
        "@ros2_sensor_msgs//:sensor_msgs",
    ],
    visibility = ["//visibility:public"],
)

ros2_cc_binary(
    name = "bev_fusion_main",
    srcs = ["src/main.cpp"],
    deps = [":bev_fusion_node"],
)
