load("@rules_ros2//ros2:cc_defs.bzl", "ros2_cc_binary", "ros2_cc_library")

ros2_cc_library(
    name = "camera_preprocess_node",
    srcs = ["src/camera_preprocess_node.cpp"],
    hdrs = ["include/camera_preprocess/camera_preprocess_node.hpp"],
    includes = ["include"],
    deps = [
        "@ros2_rclcpp//:rclcpp",
        "@ros2_rclcpp_components//:rclcpp_components",
        "@ros2_sensor_msgs//:sensor_msgs",
    ],
    visibility = ["//visibility:public"],
)

ros2_cc_binary(
    name = "camera_preprocess_main",
    srcs = ["src/main.cpp"],
    deps = [":camera_preprocess_node"],
)
