load("@rules_ros2//ros2:cc_defs.bzl", "ros2_cc_binary", "ros2_cc_library")

ros2_cc_library(
    name = "depth_generation_node",
    srcs = ["src/depth_generation_node.cpp"],
    hdrs = ["include/depth_generation/depth_generation_node.hpp"],
    includes = ["include"],
    deps = [
        "@ros2_rclcpp//:rclcpp",
        "@ros2_rclcpp_components//:rclcpp_components",
        "@ros2_sensor_msgs//:sensor_msgs",
    ],
    visibility = ["//visibility:public"],
)

ros2_cc_binary(
    name = "depth_generation_main",
    srcs = ["src/main.cpp"],
    deps = [":depth_generation_node"],
)
