load("@rules_ros2//ros2:cc_defs.bzl", "ros2_cc_binary", "ros2_cc_library")

# ─────────────────────────────────────────────────────────────────────────────
# Stub target. In production, replace with the elevation_mapping_cupy node
# wrapped via rules_foreign_cc cmake_external().
# ─────────────────────────────────────────────────────────────────────────────
ros2_cc_library(
    name = "elevation_mapping_node",
    srcs = ["src/elevation_mapping_node.cpp"],
    hdrs = ["include/elevation_mapping/elevation_mapping_node.hpp"],
    includes = ["include"],
    deps = [
        "@ros2_grid_map_msgs//:grid_map_msgs",
        "@ros2_nav_msgs//:nav_msgs",
        "@ros2_rclcpp//:rclcpp",
        "@ros2_rclcpp_components//:rclcpp_components",
        "@ros2_sensor_msgs//:sensor_msgs",
    ],
    visibility = ["//visibility:public"],
)

ros2_cc_binary(
    name = "elevation_mapping_main",
    srcs = ["src/main.cpp"],
    deps = [":elevation_mapping_node"],
)
