load("@rules_ros2//ros2:cc_defs.bzl", "ros2_cc_binary", "ros2_cc_library")

ros2_cc_library(
    name = "lidar_projection_node",
    srcs = ["src/lidar_projection_node.cpp"],
    hdrs = ["include/lidar_projection/lidar_projection_node.hpp"],
    includes = ["include"],
    deps = [
        "@ros2_rclcpp//:rclcpp",
        "@ros2_rclcpp_components//:rclcpp_components",
        "@ros2_sensor_msgs//:sensor_msgs",
    ],
    visibility = ["//visibility:public"],
)

ros2_cc_binary(
    name = "lidar_projection_main",
    srcs = ["src/main.cpp"],
    deps = [":lidar_projection_node"],
)
