load("@rules_ros2//ros2:cc_defs.bzl", "ros2_cc_binary", "ros2_cc_library")

ros2_cc_library(
    name = "segmentation_node",
    srcs = ["src/segmentation_node.cpp"],
    hdrs = ["include/segmentation/segmentation_node.hpp"],
    includes = ["include"],
    deps = [
        "@ros2_rclcpp//:rclcpp",
        "@ros2_rclcpp_components//:rclcpp_components",
        "@ros2_sensor_msgs//:sensor_msgs",
        # Backend deps — add onnxruntime and/or tensorrt here
        # "@onnxruntime//:onnxruntime",
        # "@tensorrt//:nvinfer",
    ],
    visibility = ["//visibility:public"],
)

ros2_cc_binary(
    name = "segmentation_main",
    srcs = ["src/main.cpp"],
    deps = [":segmentation_node"],
)
