load("@rules_ros2//ros2:cc_defs.bzl", "ros2_cc_binary", "ros2_cc_library")

ros2_cc_library(
    name = "sensor_sync_node",
    srcs = ["src/sensor_sync_node.cpp"],
    hdrs = ["include/sensor_sync/sensor_sync_node.hpp"],
    includes = ["include"],
    deps = [
        "@ros2_geometry_msgs//:geometry_msgs",
        "@ros2_message_filters//:message_filters",
        "@ros2_nav_msgs//:nav_msgs",
        "@ros2_rclcpp//:rclcpp",
        "@ros2_rclcpp_components//:rclcpp_components",
        "@ros2_sensor_msgs//:sensor_msgs",
    ],
    visibility = ["//visibility:public"],
)

ros2_cc_binary(
    name = "sensor_sync_main",
    srcs = ["src/main.cpp"],
    deps = [":sensor_sync_node"],
)
