load("@rules_ros2//ros2:cc_defs.bzl", "ros2_cc_binary", "ros2_cc_library")

ros2_cc_library(
    name = "temporal_grid_fusion_node",
    srcs = ["src/temporal_grid_node.cpp"],
    hdrs = ["include/temporal_grid/temporal_grid_node.hpp"],
    includes = ["include"],
    deps = [
        "@ros2_nav_msgs//:nav_msgs",
        "@ros2_rclcpp//:rclcpp",
        "@ros2_rclcpp_components//:rclcpp_components",
        "@ros2_sensor_msgs//:sensor_msgs",
        "@ros2_tf2_msgs//:tf2_msgs",
    ],
    visibility = ["//visibility:public"],
)

ros2_cc_binary(
    name = "temporal_grid_fusion_main",
    srcs = ["src/main.cpp"],
    deps = [":temporal_grid_fusion_node"],
)
